--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,5 @@
 <app-comp-main-navbar></app-comp-main-navbar>
-<div class="container pt-4 pb-4">
-  <div class="card mb-4">
-    <div class="card-header">Title</div>
-    <div class="card-body">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, cumque iure
-      alias labore dolore suscipit blanditiis itaque minima quis rem ipsa. At
-      facere fugiat ducimus eius sapiente laudantium inventore! Sed!
-    </div>
-  </div>
-  <div class="card mb-4">
-    <div class="card-header">Title</div>
-    <div class="card-body">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, cumque iure
-      alias labore dolore suscipit blanditiis itaque minima quis rem ipsa. At
-      facere fugiat ducimus eius sapiente laudantium inventore! Sed!
-    </div>
-  </div>
+<div class="container-fluid pt-2 pb-2">
+  <router-outlet></router-outlet>
 </div>
-<!-- <router-outlet></router-outlet> -->
-<app-comp-main-footer></app-comp-main-footer>
+<!-- <app-comp-main-footer></app-comp-main-footer> -->
