--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -24,8 +24,9 @@ $yellow: #f89406 !default;
 $green: #62c462 !default;
 $teal: #20c997 !default;
 $cyan: #5bc0de !default;
+$red-race: #af3030 !default;
 
-$primary: $blue !default;
+$primary: $red-race !default;
 $secondary: $orange !default;
 $success: $green !default;
 $info: $cyan !default;
