--- a/src/app/components/comp-main-navbar/comp-main-navbar.component.html
+++ b/src/app/components/comp-main-navbar/comp-main-navbar.component.html
@@ -1,11 +1,11 @@
 <div class="navbar bg-primary">
   <div class="container-fluid align-center">
     <div class="d-flex align-center">
-      <button class="btn btn-sm btn-primary me-2" routerLink="/">
+      <button class="btn btn-sm btn-primary me-2" routerLink="/home">
         <i class="fa fa-home"></i>
         <span> Home</span>
       </button>
-      <button class="btn btn-sm btn-primary" routerLink="/">
+      <button class="btn btn-sm btn-primary" routerLink="/cars">
         <i class="fa fa-car"></i>
         <span> Cars</span>
       </button>
