drivers route created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-comp-main-navbar></app-comp-main-navbar>
-<div class="container-fluid pt-2 pb-2">
+<div class="container pt-2 pb-2">
   <router-outlet></router-outlet>
 </div>
 <!-- <app-comp-main-footer></app-comp-main-footer> -->
