--- a/src/app/components/comp-main-navbar/comp-main-navbar.component.html
+++ b/src/app/components/comp-main-navbar/comp-main-navbar.component.html
@@ -5,9 +5,13 @@
         <i class="fa fa-home"></i>
         <span> Home</span>
       </button>
-      <button class="btn btn-sm btn-primary" routerLink="/cars">
+      <button class="btn btn-sm btn-primary me-2" routerLink="/cars">
         <i class="fa fa-car"></i>
         <span> Cars</span>
+      </button>
+      <button class="btn btn-sm btn-primary me-2" routerLink="/drivers">
+        <i class="fa fa-user"></i>
+        <span> Drivers</span>
       </button>
     </div>
     <app-comp-theme-switcher></app-comp-theme-switcher>
