--- a/src/app/routes/route-cars/route-cars.component.html
+++ b/src/app/routes/route-cars/route-cars.component.html
@@ -9,7 +9,7 @@
       <span
         class="delete-btn text-danger"
         title="Delete Car"
-        (click)="deleteCar(car.id, car.name)"
+        (click)="deleteData(car.id, car.name)"
       >
         <i class="fa fa-trash"></i>
       </span>
