--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import "./node_modules/bootstrap/scss/bootstrap";
+@import "./variables";
 @import "./fonts";
 
 html,
@@ -38,8 +39,8 @@ label:focus,
   background: #333;
 }
 ::-webkit-scrollbar-thumb {
-  background: darken(rgb(255, 232, 31), 5);
+  background: lighten($primary, 5);
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: darken(rgb(255, 232, 31), 10%);
+  background: lighten($primary, 10%);
 }
