--- a/src/app/components/comp-main-navbar/comp-main-navbar.component.html
+++ b/src/app/components/comp-main-navbar/comp-main-navbar.component.html
@@ -13,6 +13,10 @@
         <i class="fa fa-user"></i>
         <span> Drivers</span>
       </button>
+      <button class="btn btn-sm btn-primary me-2" routerLink="/race">
+        <i class="fa fa-flag"></i>
+        <span> Race</span>
+      </button>
     </div>
     <app-comp-theme-switcher></app-comp-theme-switcher>
   </div>
