home quick link

--- a/src/app/routes/route-race/route-race.component.html
+++ b/src/app/routes/route-race/route-race.component.html
@@ -1,39 +1,57 @@
-<h1 class="badge fs-1 bg-secondary">
-  Lap Timer: {{ lap.minute }}:{{ lap.second }}:{{ lap.millisecond }}
-</h1>
-<div>
-  <button class="btn btn-success me-2" (click)="start()">
+<!-- <form>
+  <div class="row">
+    <div class="col">
+      <select class="form-select">
+        <option selected>Select track</option>
+        <option *ngFor="let track of tracks" [value]="track.id">
+          {{ track.name }}
+        </option>
+      </select>
+    </div>
+  </div>
+</form> -->
+<div class="text-center">
+  <h1 class="badge fs-1 bg-secondary">
+    Lap Timer: {{ lap.minute }}:{{ lap.second }}.{{ lap.millisecond }}
+  </h1>
+</div>
+<div class="text-center">
+  <button class="btn btn-success btn-sm me-2" (click)="start()">
     <i class="fa fa-play"></i>
     <span> Start</span>
   </button>
 
-  <button class="btn btn-warning me-2" (click)="set()">
+  <button class="btn btn-warning btn-sm me-2" (click)="set()">
     <i class="fa fa-flag"></i>
     <span> Set</span>
   </button>
 
-  <button class="btn btn-info me-2" (click)="pause()">
+  <button class="btn btn-info btn-sm me-2" (click)="pause()">
     <i class="fa fa-pause"></i>
     <span> Pause</span>
   </button>
 
-  <button class="btn btn-danger me-2" (click)="reset()">
+  <button class="btn btn-danger btn-sm me-2" (click)="reset()">
     <i class="fa fa-times"></i>
     <span> Reset</span>
   </button>
 </div>
 
-<div *ngIf="lapsRecord.length != 0" class="card mt-4">
-  <div class="card-body">
-    {{ fastestLap.minute }}:{{ fastestLap.second }}:{{ fastestLap.millisecond }}
+<div *ngIf="lapsRecord.length != 0" class="card mt-4 bg-success">
+  <div class="card-body text-center fs-3 text-white fw-bold">
+    {{ fastestLap.minute }}:{{ fastestLap.second }}.{{ fastestLap.millisecond }}
   </div>
 </div>
 
 <div *ngIf="lapsRecord.length != 0" class="card mt-4">
   <div class="card-body">
     <div class="list-group list-group-flush">
-      <div *ngFor="let lapi of lapsRecord" class="list-group-item">
-        <span>{{ lapi.minute }}:{{ lapi.second }}:{{ lapi.millisecond }}</span>
+      <div
+        *ngFor="let lapi of lapsRecord; let i = index"
+        class="list-group-item"
+      >
+        <span class="fw-bold">{{ i }} </span>
+        <span> {{ lapi.minute }}:{{ lapi.second }}.{{ lapi.millisecond }}</span>
       </div>
     </div>
   </div>
