children routes CDT modulte

--- a/src/app/components/comp-main-navbar/comp-main-navbar.component.html
+++ b/src/app/components/comp-main-navbar/comp-main-navbar.component.html
@@ -5,13 +5,9 @@
         <i class="fa fa-home"></i>
         <span> Home</span>
       </button>
-      <button class="btn btn-sm btn-primary me-2" routerLink="/cars">
-        <i class="fa fa-car"></i>
-        <span> Cars</span>
-      </button>
-      <button class="btn btn-sm btn-primary me-2" routerLink="/drivers">
-        <i class="fa fa-user"></i>
-        <span> Drivers</span>
+      <button class="btn btn-sm btn-primary me-2" routerLink="/cdt">
+        <i class="fa fa-circle"></i>
+        <span> CDT</span>
       </button>
       <button class="btn btn-sm btn-primary me-2" routerLink="/race">
         <i class="fa fa-flag"></i>
