--- a/src/app/modules/cdt/cdt.component.html
+++ b/src/app/modules/cdt/cdt.component.html
@@ -1,1 +1,9 @@
-<p>cdt works!</p>
+<app-comp-cdt-tab [links]="cdtTab"></app-comp-cdt-tab>
+<div class="card">
+  <div class="card-header">
+    <h4>Rota aqui</h4>
+  </div>
+  <div class="card-body">
+    <router-outlet></router-outlet>
+  </div>
+</div>
