customize tab on dark theme

--- a/src/app/modules/cdt/components/comp-cdt-tab/comp-cdt-tab.component.html
+++ b/src/app/modules/cdt/components/comp-cdt-tab/comp-cdt-tab.component.html
@@ -1,4 +1,4 @@
-<ul class="nav nav-pills nav-fill">
+<ul class="nav nav-tabs nav-fill">
   <li *ngFor="let tab of links" class="nav-item">
     <a
       class="nav-link"
