--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -44,10 +44,13 @@ $dropdown-link-active-color: $dropdown-link-hover-color !default;
 $dropdown-link-active-bg: $dropdown-link-hover-bg !default;
 
 // Navs
-$nav-tabs-border-color: rgba($black, 0.6) !default;
-$nav-tabs-link-hover-border-color: $nav-tabs-border-color !default;
-$nav-tabs-link-active-color: $white !default;
-$nav-tabs-link-active-border-color: $nav-tabs-border-color !default;
+$nav-link-color: rgba($light, 0.2) !default;
+$nav-tabs-border-color: rgba($light, 0.2) !default;
+// $nav-tabs-link-hover-border-color: $nav-tabs-border-color !default;
+$nav-tabs-link-active-color: rgba($light, 0.8) !default;
+// $nav-tabs-link-active-bg: $nav-tabs-border-color !default;
+$nav-tabs-link-active-border-color: $nav-tabs-border-color
+  $nav-tabs-border-color $body-bg !default;
 
 // Navbar
 $navbar-dark-hover-color: $white !default;
