cdt delete cars function

--- a/src/app/modules/cdt/components/comp-cdt-cars-list/comp-cdt-cars-list.component.html
+++ b/src/app/modules/cdt/components/comp-cdt-cars-list/comp-cdt-cars-list.component.html
@@ -9,7 +9,11 @@
           class="card-header d-flex justify-content-between align-items-center"
         >
           <span class="fw-bold">{{ car.name }}</span>
-          <span class="delete-btn text-danger" title="Delete Car">
+          <span
+            class="delete-btn text-danger"
+            title="Delete Car"
+            (click)="delete(car)"
+          >
             <i class="fa fa-trash"></i>
           </span>
         </div>
