--- a/src/app/modules/cdt/routes/route-cars/components/comp-cdt-cars-list/comp-cdt-cars-list.component.html
+++ b/src/app/modules/cdt/routes/route-cars/components/comp-cdt-cars-list/comp-cdt-cars-list.component.html
@@ -23,7 +23,7 @@
           [ngStyle]="{ 'background-image': 'url(' + car.image + ')' }"
         ></div>
         <div class="card-footer small">
-          <span>Category: {{ car.type }}</span>
+          <span>Category: {{ car.category }}</span>
         </div>
       </div>
     </div>
