--- a/src/app/modules/cdt/routes/route-cars/route-cars.component.html
+++ b/src/app/modules/cdt/routes/route-cars/route-cars.component.html
@@ -2,7 +2,7 @@
   <button
     class="btn btn-sm btn-success"
     data-bs-toggle="modal"
-    data-bs-target="#exampleModal"
+    data-bs-target="#addCarModal"
   >
     <i class="fa fa-plus"></i>
     <span class=""> ADD CAR</span>
