--- a/src/app/modules/cdt/routes/route-cars/components/comp-cdt-cars-add-modal/comp-cdt-cars-add-modal.component.html
+++ b/src/app/modules/cdt/routes/route-cars/components/comp-cdt-cars-add-modal/comp-cdt-cars-add-modal.component.html
@@ -1,30 +1,29 @@
-<form [formGroup]="carForm" (ngSubmit)="submitForm()">
+<div
+  class="modal fade"
+  id="addCarModal"
+  data-bs-backdrop="static"
+  tabindex="-1"
+  aria-labelledby="addCarModal"
+  aria-hidden="true"
+>
   <div
-    class="modal fade"
-    id="addCarModal"
-    #formModal
-    data-bs-backdrop="static"
-    tabindex="-1"
-    aria-labelledby="addCarModal"
-    aria-hidden="true"
+    class="modal-dialog modal-dialog-centered modal-fullscreen-sm-down modal-dialog-scrollable"
   >
-    <div
-      class="modal-dialog modal-dialog-centered modal-fullscreen-sm-down modal-dialog-scrollable"
-    >
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="addCarModal">
-            <i class="fa fa-plus"></i>
-            <span> ADD CAR</span>
-          </h5>
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-          ></button>
-        </div>
-        <div class="modal-body">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addCarModal">
+          <i class="fa fa-plus"></i>
+          <span> ADD CAR</span>
+        </h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="carForm">
           <div class="mb-3">
             <label for="name" class="form-label small">Name:</label>
             <input
@@ -55,22 +54,23 @@
               formControlName="image"
             />
           </div>
-        </div>
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-sm btn-success">
-            <i class="fa fa-save"></i>
-            <span> Save</span>
-          </button>
-          <button
-            type="button"
-            class="btn btn-sm btn-danger"
-            data-bs-dismiss="modal"
-          >
-            <i class="fa fa-times"></i>
-            <span> Cancel</span>
-          </button>
-        </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-sm btn-success" (click)="submitForm()">
+          <i class="fa fa-save"></i>
+          <span> Save</span>
+        </button>
+        <button
+          #closeModal
+          type="button"
+          class="btn btn-sm btn-danger"
+          data-bs-dismiss="modal"
+        >
+          <i class="fa fa-times"></i>
+          <span> Cancel</span>
+        </button>
       </div>
     </div>
   </div>
-</form>
+</div>
