--- a/src/app/modules/cdt/routes/route-cars/route-cars.component.html
+++ b/src/app/modules/cdt/routes/route-cars/route-cars.component.html
@@ -10,7 +10,7 @@
 </div>
 
 <app-comp-cdt-cars-list
-  [cars]="cars"
+  [cars]="cars.reverse()"
   (deleteCar)="deleteData($event)"
 ></app-comp-cdt-cars-list>
 
