--- a/src/app/modules/race/race.component.html
+++ b/src/app/modules/race/race.component.html
@@ -12,21 +12,21 @@
 </form> -->
 <div class="text-center">
   <h1 class="badge fs-1 bg-secondary">
-    Lap Timer: {{ lap.minute }}:{{ lap.second }}.{{ lap.millisecond }}
+    <!-- Lap Timer: {{ lap.minute }}:{{ lap.second }}.{{ lap.millisecond }} -->
   </h1>
 </div>
 <div class="text-center">
-  <button class="btn btn-success btn-sm me-2" (click)="start()">
+  <button class="btn btn-success btn-sm me-2" >
     <i class="fa fa-play"></i>
     <span> Start</span>
   </button>
 
-  <button class="btn btn-warning btn-sm me-2" (click)="set()">
+  <button class="btn btn-warning btn-sm me-2" >
     <i class="fa fa-flag"></i>
     <span> Set</span>
   </button>
 
-  <button class="btn btn-info btn-sm me-2" (click)="pause()">
+  <button class="btn btn-info btn-sm me-2">
     <i class="fa fa-pause"></i>
     <span> Pause</span>
   </button>
@@ -37,12 +37,12 @@
   </button>
 </div>
 
-<app-comp-race-fastest-lap
+<!-- <app-comp-race-fastest-lap
   *ngIf="lapsRecord.length != 0"
   [fastestLap]="fastestLap"
-></app-comp-race-fastest-lap>
+></app-comp-race-fastest-lap> -->
 
 <app-comp-race-list-lap
-  *ngIf="lapsRecord.length != 0"
-  [lapsRecord]="lapsRecord"
+  *ngIf="lapsP1.length != 0"
+  [lapsList]="lapsP1"
 ></app-comp-race-list-lap>
