--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -20,10 +20,11 @@ $purple: #6f42c1 !default;
 $pink: #e83e8c !default;
 $red: #ee5f5b !default;
 $orange: #fd7e14 !default;
-$yellow: #e0dd29 !default;
+$yellow: #d6b340 !default;
 $green: #62c462 !default;
 $teal: #20c997 !default;
 $cyan: #5bc0de !default;
+$primary: $red-race;
 
 $theme-colors: (
   "primary": $red-race,
