--- a/src/app/modules/race/components/comp-race-navbar/comp-race-navbar.component.html
+++ b/src/app/modules/race/components/comp-race-navbar/comp-race-navbar.component.html
@@ -9,7 +9,7 @@
           <span> Start</span>
         </button>
 
-        <button class="btn btn-info btn-sm">
+        <button class="btn btn-warning btn-sm">
           <i class="fa fa-square"></i>
           <span> Stop</span>
         </button>
@@ -20,7 +20,7 @@
         </button>
       </div>
       <div>
-        <button class="btn btn-primary btn-sm mt-2">
+        <button class="btn btn-primary">
           <i class="fa fa-map-o"></i>
           <span> SELECT TRACK</span>
         </button>
