--- a/src/app/modules/race/components/comp-race-player/comp-race-player.component.html
+++ b/src/app/modules/race/components/comp-race-player/comp-race-player.component.html
@@ -1,10 +1,14 @@
-<div class="card palayer flex-row justify-content-between align-items-center">
+<div
+  class="card flex-row justify-content-between align-items-center"
+  data-bs-toggle="modal"
+  data-bs-target="#selectPlayerModal"
+>
   <div
-    class="player-image"
+    class="card-image"
     style="background-image:url('{{ driver.image }}') ;"
   ></div>
-  <div class="d-flex flex-column align-items-end me-4">
-    <span class="player-name">{{ driver.name }}</span>
-    <span class="player-car">{{ car.name }}</span>
+  <div class="d-flex flex-column align-items-end">
+    <span class="card-name">{{ driver.name }}</span>
+    <span class="card-car">{{ car.name }}</span>
   </div>
 </div>
