--- a/src/app/modules/race/components/comp-race-player/comp-race-player.component.scss
+++ b/src/app/modules/race/components/comp-race-player/comp-race-player.component.scss
@@ -1,9 +1,14 @@
-.player {
+.card {
   height: 100px;
   width: 100%;
-
   justify-content: space-between;
   align-items: center;
+  cursor: pointer;
+  padding-right: 20px;
+
+  &:hover {
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  }
 
   &-image {
     height: 100px;
@@ -30,8 +35,9 @@
 }
 
 @media screen and (max-width: 576px) {
-  .player {
-    height: 50px;
+  .card {
+    height: 60px;
+    padding-right: 20px;
 
     &-image {
       height: 60px;
