--- a/src/app/modules/race/components/comp-race-navbar/comp-race-navbar.component.html
+++ b/src/app/modules/race/components/comp-race-navbar/comp-race-navbar.component.html
@@ -3,6 +3,13 @@
     <div
       class="card-body d-flex justify-content-between align-items-center flex-wrap"
     >
+      <div>
+        <button class="btn btn-primary">
+          <i class="fa fa-map-o"></i>
+          <span> SELECT TRACK</span>
+        </button>
+      </div>
+
       <div class="btn-group">
         <button class="btn btn-info btn-sm">
           <i class="fa fa-play"></i>
@@ -14,17 +21,16 @@
           <span> Stop</span>
         </button>
 
-        <button class="btn btn-danger btn-sm">
+        <button class="btn btn-danger btn-sm" (click)="reset()">
           <i class="fa fa-times"></i>
           <span> Reset</span>
         </button>
       </div>
-      <div>
-        <button class="btn btn-primary">
-          <i class="fa fa-map-o"></i>
-          <span> SELECT TRACK</span>
-        </button>
-      </div>
+
+      <button class="btn btn-info btn-sm" (click)="numberOfPlayers()">
+        <span *ngIf="race.config.players == 1"> 1 Player</span>
+        <span *ngIf="race.config.players == 2"> 2 Players</span>
+      </button>
     </div>
   </div>
 </div>
