--- a/src/app/modules/race/components/comp-race-navbar/comp-race-navbar.component.html
+++ b/src/app/modules/race/components/comp-race-navbar/comp-race-navbar.component.html
@@ -10,27 +10,26 @@
         </button>
       </div>
 
-      <div class="btn-group">
-        <button class="btn btn-info btn-sm">
-          <i class="fa fa-play"></i>
-          <span> Start</span>
-        </button>
+      <div>
+        <div class="btn-group me-2">
+          <button class="btn btn-purple" (click)="start()">
+            <i class="fa fa-play"></i>
+          </button>
 
-        <button class="btn btn-warning btn-sm">
-          <i class="fa fa-square"></i>
-          <span> Stop</span>
-        </button>
+          <button class="btn btn-purple" (click)="stop()">
+            <i class="fa fa-square"></i>
+          </button>
 
-        <button class="btn btn-danger btn-sm" (click)="reset()">
-          <i class="fa fa-times"></i>
-          <span> Reset</span>
+          <button class="btn btn-purple" (click)="reset()">
+            <i class="fa fa-times"></i>
+          </button>
+        </div>
+
+        <button class="btn btn-secondary" (click)="numberOfPlayers()">
+          <span *ngIf="race.config.players == 1"> 1 Player</span>
+          <span *ngIf="race.config.players == 2"> 2 Players</span>
         </button>
       </div>
-
-      <button class="btn btn-info btn-sm" (click)="numberOfPlayers()">
-        <span *ngIf="race.config.players == 1"> 1 Player</span>
-        <span *ngIf="race.config.players == 2"> 2 Players</span>
-      </button>
     </div>
   </div>
 </div>
